--- a/Project.toml
+++ b/Project.toml
@@ -1,11 +1,14 @@
 [deps]
 Agents = "46ada45e-f475-11e8-01d0-f70cc89e6671"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 Compose = "a81c6b42-2e10-5240-aca2-a61377ecd94b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
-LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+InteractiveDynamics = "ec714cd0-5f51-11eb-0b6e-452e7367ff84"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
-Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
-Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
